# BI-GMRF

./: README.md
BI_GMRF/: CMakeLists.txt  Constant.cpp  Constant.h  Generate.cpp  Generate.h  Initial.cpp  Initial.h  Mcmc.cpp  Mcmc.h  README.md  main.cpp  rgamma.cpp  rgamma.h  rnorm.cpp  rnorm.h  runif.cpp  runif.h  runifVec.cpp  runifVec.h  strToVec.cpp  strToVec.h
BI_GMRF/const/circle/: Constant.h
BI_GMRF/const/cross/: Constant.h
BI_GMRF/const/square/: Constant.h
BI_GMRF/const/triangle/: Constant.h
BI_GMRF/data/: nNbh.txt  nbh.txt
evaluation/: figure1.py  figure2.R  mask_indiv_and_group_JHU_atlas_volume  table1.R
gene/: README.md  gene.m
